# aml2025-group-28

./: .gitignore  .gitmodules  Installation_Instructions.md  PROBLEMSETTING.md  README.md  pyproject.toml  reqs.txt  requirements_e.txt
RNAgrail/: .gitignore  INSTUCTIONS.md  INSTUCTIONS_CUDA.md  pyproject.toml
RNAgrail/RiNALMo/rinalmo.egg-info/: PKG-INFO
RNAgrail/src/grapharna/: evaluate_predictions.py  main_rna_pdb.py  main_rna_pdb_single.py  (+8 more)
data_prep/: dataset_prep.ipynb  dataset_prep.py
data_prep/.ipynb_checkpoints/: dataset_prep-checkpoint.ipynb
evaluation_metrics_cust/: plots.ipynb
evaluation_metrics_cust/stat_baseline/: stat_baseline.py
evaluation_metrics_cust/tmscore_code/: score.py  score_dir.py
fs25_aml_group_28.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
intputoutputtesting/: exploratory.ipynb  inspect_pickle.ipynb
intputoutputtesting/dotseqs/: 17RA_A.dotseq  1A1T_B.dotseq  1A4T_A.dotseq  1A51_A.dotseq  1A60_A.dotseq  1A9N_Q.dotseq  1AFX_A.dotseq  1ANR_A.dotseq  1AQO_A.dotseq  1ATO_A.dotseq  1ATV_A.dotseq  1ATW_A.dotseq  1AUD_B.dotseq  1B36_A.dotseq  1BAU_B.dotseq  1BGZ_A.dotseq  1BIV_A.dotseq  1BVJ_A.dotseq  1BZ2_A.dotseq  1CQ5_A.dotseq  1D0U_A.dotseq  1D6K_B.dotseq  1E4P_A.dotseq  1E7K_D.dotseq  1E95_A.dotseq  1EBQ_A.dotseq  1EBR_A.dotseq  1EIY_C.dotseq  1EKZ_B.dotseq  1ESH_A.dotseq  1ESY_A.dotseq  1ETF_A.dotseq  1EUQ_B.dotseq  1EXY_A.dotseq  1F5U_B.dotseq  1F6X_A.dotseq  1F6Z_A.dotseq  1F84_A.dotseq  1F85_A.dotseq  1F9L_A.dotseq  (+804 more)
kaggle_data_set/: transorm_kaggle_dotseq.ipynb
stat_baseline/: stat_baseline_dir.py
(+3 files in other folders)
