[project]
name = "fs25-aml-group-28"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "gdown>=5.2.0",
    "ml-collections>=1.1.0",
    "numpy>=2.2.5",
    "packaging>=25.0",
    "pandas>=2.2.3",
    "rnapolis>=0.8.2",
    "ruff>=0.11.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "wandb>=0.19.9",
]
