[project]
name = "fs25-aml-group-28"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools>=79.0.0",
    "torch>=2.3.0",
    "grapharna",
    "rinalmo",
    "einops>=0.8.1",
]

[tool.uv.sources]
grapharna = { path = "RNAgrail" }
rinalmo = { path = "RNAgrail/RiNALMo" }
